# hello-allegro

./: CMakeLists.txt  README.md
cmake/: BuildAllegro.cmake  FindAllegro.cmake  util.cmake
src/: CMakeLists.txt  main.cc
